--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/a0ce8fa0f3.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <app-root></app-root>
   </body>
 </html>
